# dyne

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
dyne/: __init__.py  _common.py  ekf.py  examples.py  linear.py  optimize.py  ukf.py  util.py
dyne/tests/: test_algorithms_basic.py  test_ukf.py  test_util.py
nlks/: __init__.py  _common.py  ekf.py  examples.py  linear.py  optimize.py  util.py
nlks/tests/: test_algorithms_basic.py  test_linear.py
